--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-Flask
-Gunicorn
-psycopg2
-flask_sqlalchemy
-bcrypt
-plotly
+bcrypt==4.1.2
+Flask==2.3.3
+Flask-SQLAlchemy==3.1.1
+pandas==2.1.4
+plotly==5.18.0
+requests==2.31.0
